Adicionando o alt da logo.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="#"><img src="/Imagens/logo.png" width="100%"> </a>
+                <a href="#"><img src="/Imagens/logo.png" alt="Imagem da Logo" width="100%"> </a>
                 <p class="Icon"><b>GetGames</b></p>
             </div>
 
