--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
         menuIcon.addEventListener('click', () => {
             menu.classList.toggle('ativo');
-            if (menuIconImg.getAttribute("src") == '/Imagens/menu.png') {
-                menuIconImg.setAttribute("src", "/Imagens/close.png")
+            if (menuIconImg.getAttribute("src") == '../Imagens/menu.png') {
+                menuIconImg.setAttribute("src", "../Imagens/close.png")
             } else {
-                menuIconImg.setAttribute("src", "/Imagens/menu.png")
+                menuIconImg.setAttribute("src", "../Imagens/menu.png")
             }
         })
     </script>
