--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>GetGames</title>
-    <link rel="shortcut icon" href="/Imagens/logo.png">
+    <link rel="shortcut icon" href="../Imagens/logo.png">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
             </ul>
 
             <div class="menu-icon">
-                <img src="/Imagens/menu.png" alt="Menu">
+                <img src="../Imagens/menu.png" alt="Menu">
             </div>
 
         </nav>
