--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>GetGames</title>
-    <link rel="shortcut icon" href="../Imagens/logo.png">
+    <link rel="shortcut icon" href="Imagens/logo.png">
 </head>
 
 <body>
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="#"><img src="../Imagens/logo.png" alt="Imagem da Logo" width="100%"> </a>
+                <a href="#"><img src="Imagens/logo.png" alt="Imagem da Logo" width="100%"> </a>
                 <p class="Icon"><b>GetGames</b></p>
             </div>
 
@@ -28,7 +28,7 @@
             </ul>
 
             <div class="menu-icon">
-                <img src="../Imagens/menu.png" alt="Menu">
+                <img src="Imagens/menu.png" alt="Menu">
             </div>
 
         </nav>
