--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
 
             <div class="menu-icon">
-                <img src="/Imagens/menu.png" alt="Menu">
+                <img src="Imagens/menu.png" alt="Menu">
             </div>
 
         </nav>
