--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>GetGames</title>
-    <link rel="shortcut icon" href="/Imagens/logo.png">
+    <link rel="shortcut icon" href="Imagens/logo.png">
 </head>
 
 <body>
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="#"><img src="/Imagens/logo.png" alt="Imagem da Logo" width="100%"> </a>
+                <a href="#"><img src="Imagens/logo.png" alt="Imagem da Logo" width="100%"> </a>
                 <p class="Icon"><b>GetGames</b></p>
             </div>
 
@@ -44,7 +44,7 @@
 
             </div>
             <div class="main__img"></div>
-            <img src="/Imagens/game.png" alt="Joysticks">
+            <img src="Imagens/game.png" alt="Joysticks">
 
         </main>
         <p>Cadastre-se no <strong>GetGames</strong> gratuitamente de forma rápida e simples: </p>
@@ -77,10 +77,10 @@
 
         menuIcon.addEventListener('click', () => {
             menu.classList.toggle('ativo');
-            if (menuIconImg.getAttribute("src") == "/Imagens/menu.png") {
-                menuIconImg.setAttribute("src", "/Imagens/close.png")
+            if (menuIconImg.getAttribute("src") == "Imagens/menu.png") {
+                menuIconImg.setAttribute("src", "Imagens/close.png")
             } else {
-                menuIconImg.setAttribute("src", "/Imagens/menu.png")
+                menuIconImg.setAttribute("src", "Imagens/menu.png")
             }
         })
     </script>
